Agrego calendario al footer

--- a/vacunas.html
+++ b/vacunas.html
@@ -193,7 +193,12 @@
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
-                        <li><a href="vacunas.html">Vacunas</a></li>
+                        <li>
+                            <a href="vacunas.html">Vacunas</a>
+                        </li>
+                        <li>
+                            <a href="calendario.html">Calendario</a>
+                        </li>
                         <li>
                             <a href="mapa.html">Hospitales</a>
                         </li>
